--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,7 +10,8 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  graphql: ">=4.0.0 <6.0.0"
+  gql_exec: ">=0.4.0 <2.0.0"
+  gql_link: ">=0.5.0 <2.0.0"
   phoenix_socket: ">=0.7.0 <1.0.0"
 
 dev_dependencies:
